;; Negative tests with counterexamples
(executables
 (libraries qcheck qcstm ppx_deriving)
 (package qcstm)
 (public_names hanoi waterjug)
 (names hanoi waterjug)
 (modules hanoi waterjug)
 (preprocess (pps ppx_deriving.show)))

;; Positive tests
(tests
 (libraries qcheck qcstm ppx_deriving)
 (package qcstm)
 (names q counter stk hashtable buf)
 (modules q counter stk hashtable buf)
 (preprocess (pps ppx_deriving.show)))

;; Native C test
(executables
 (libraries qcheck qcstm ppx_deriving ctypes ctypes.foreign)
 (package qcstm)
 (public_names stdio putget)
 (names stdio putget)
 (modules stdio putget)
 (foreign_stubs
  (language c)
  (names stdiostub putgetstub))
 (preprocess (pps ppx_deriving.show)))

;; Run Native C test
(rule
 (alias  runtest)
 (action (run ./stdio.exe)))
